[metadata]
name = eNLPKit
version = 0.0.1
author = Nick Vasko
author_email = nicholas.d.vasko@gmail.com
description = eNLPKit is an efficient Python toolkit for Natural Language Processing, designed to scale across large datasets.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nickvasko/eNLPKit
project_urls =
    Bug Tracker = https://github.com/nickvasko/eNLPKit/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = enlpkit
packages = find:
python_requires = >=3.6

[options.packages.find]
where = enlpkit